--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URL=mongodb+srv://ecom:EehrLzy3XYX5WzCB@cluster0.vii99b3.mongodb.net/todo?
 retryWrites=true&
 w=majority&
 appName=Cluster0
+PORT=8000
